infra/k8s/deployment-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastfood-api
  labels:
    name: fastfood-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastfood-api
  template:
    metadata:
      labels:
        app: fastfood-api
    spec:
      containers:
      - name: fastfood-api
        image: APPLICATION_IMAGE_HOLDER
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            memory: "256Mi"
            cpu: "125m"
          limits:
            memory: "512Mi"
            cpu: "2000m"
        ports:
        - containerPort: 8080
