infra/k8s/services-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastfood-api
  labels:
    app: fastfood-api
spec:
  selector:
    app: fastfood-api
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
