infra/k8s/ingress-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastfood-api
  labels:
    app: fastfood-api
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - http:
      paths:
      - pathType: ImplementationSpecific
        path: /fastfood-api(/|$)(.*)
        backend:
          service:
            name: fastfood-api
            port: 
              number: 80
